# zimrs

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  rust-toolchain.toml
.github/workflows/: release-artifacts.yml
benches/: extraction_bench.rs
benches/data/: sample_wiktionary_fragment.html
benchmarks/: BASELINE.md
config/: wiktionary.toml
docs/roadmaps/: postgres.md  query-speed-hot-languages.md
scripts/: benchmark.sh  build_release_artifacts.sh  export_json.sh
scripts/sql/: hot_lookup_backfill.sql  hot_lookup_health_checks.sql
src/: config.rs  db.rs  export.rs  extractor.rs  lib.rs  main.rs  normalization.rs  pipeline.rs  release.rs  verify.rs
tests/: harness.rs
