[package]
name = "zimrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
crossbeam-channel = "0.5.15"
deunicode = "1.6.2"
html-escape = "0.2.13"
num_cpus = "1.17.0"
once_cell = "1.21.3"
regex = "1.12.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tl = "0.7.8"
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
zim = "0.4.0"

[dev-dependencies]
assert_cmd = "2.1.2"
criterion = { version = "0.8.2", features = ["html_reports"] }
predicates = "3.1.4"
tempfile = "3.26.0"

[patch.crates-io]
zim = { path = "vendor/zim" }

[[bench]]
name = "extraction_bench"
harness = false
